fix alignment of slow table slightly

--- a/toolpages/medcenter/medcenter.css
+++ b/toolpages/medcenter/medcenter.css
@@ -98,7 +98,7 @@ td.image img{
 }
 
 .effect td table  {
-    width: 470px;
+    width: 450px;
 }
 
 .effect td table td{
